<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_padding_medium"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/common_padding_medium">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/common_padding_small2"
                android:layout_marginEnd="@dimen/common_padding_small2"
                android:src="@drawable/close_black" />

            <ImageView
                android:layout_width="@dimen/common_padding_large3"
                android:layout_height="@dimen/common_padding_large3"
                android:src="@drawable/money_emoji"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/tvCoinPurchagedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_padding_medium1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/coin_purchased"
                android:textColor="@color/black_text"
                android:textSize="@dimen/font_large2" />

            <TextView
                android:id="@+id/tvCoinPurchagedContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_padding_medium1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/you_purchased_"
                android:textColor="@color/black_text"
                android:textSize="@dimen/font_small2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_padding_small1"
                android:layout_marginBottom="@dimen/common_padding_medium1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/coin_check_profile"
                android:textColor="@color/black_text"
                android:textSize="@dimen/font_small2" />

            <TextView
                android:id="@+id/tvCheckCoinBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_coin_balance"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/blue_500"
                android:layout_marginBottom="@dimen/common_padding_large"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>