<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/common_padding_small2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_small2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/common_padding_small2"
            app:srcCompat="@drawable/close_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/tech_guy_emoji" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/common_padding_small2"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/password_has_reset"
            android:textColor="@color/black_text"
            android:textSize="@dimen/font_large2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_small2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/you_login_password"
            android:textSize="@dimen/font_medium1"
            android:textColor="@color/black_text"
            android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/common_padding_large2"
            android:layout_marginBottom="@dimen/common_padding_large2"
            android:text="@string/log_in"
            android:textColor="#0280EC"
            android:textSize="@dimen/font_medium2"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>