<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_padding_small2"
    android:padding="@dimen/common_padding_small2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tab_layout_background">

    <TextView
        android:id="@+id/tvVideocallBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_small2"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:background="@drawable/purple_round_gradient"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/video_call"
        android:textAlignment="center"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_medium1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVoicecallBtn" />

    <TextView
        android:id="@+id/tvVoicecallBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_small2"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:background="@drawable/blue_round_background"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/voice_call"
        android:textAlignment="center"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_medium1"
        app:layout_constraintBottom_toTopOf="@id/tvVideocallBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/call_type_selection"
        android:textAlignment="center"
        android:textColor="@color/black_text"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toTopOf="@+id/tvVoicecallBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>